[package]
name = "talk-server"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bytes = "1.6.0"
chrono = "0.4.38"
rusqlite = "0.31.0"
serde = "1.0.202"
serde_as = "0.0.1"
serde_derive = "1.0.202"
serde_json = "1.0.117"
serde_with = { version = "*", features = ["base64"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
uuid = "1.8.0"
